--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
             python3 -m venv env_torchac
             . env_torchac/bin/activate
             pip3 install --upgrade pip
-            pip3 install torch pytest
+            pip3 install torch pytest ninja
             echo "export PYTHONPATH=.:$PYTHONPATH" >> $BASH_ENV
           name: Setup
       - run:
           command: |
             . env_torchac/bin/activate
-            CUDA_VISIBLE_DEVICES="" python -m pytest tests/test.py -s
+            CUDA_VISIBLE_DEVICES="" python3 -m pytest tests/test.py -s
             
 
 workflows:
